--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,19 @@
-version = 2.5.0
+version = "3.0.5"
 continuationIndent.defnSite = 2
 continuationIndent.ctorSite = 2
 continuationIndent.extendSite = 2
+runner.dialect = scala212
+fileOverride {
+  "glob:**/scala3-lang-2/src/main/scala/**" {
+     runner.dialect = scala3
+  }
+  "glob:**/scala3-lang/src/test/scala/**" {
+     runner.dialect = scala3
+  }
+  "glob:**/scala3-lang-2/src/test/scala/**" {
+     runner.dialect = scala3
+  }
+  "glob:**/scala3-lang/src/main/scala/**" {
+     runner.dialect = scala3
+  }
+}
